--- a/deep_learning_open_cv_docker/Dockerfile
+++ b/deep_learning_open_cv_docker/Dockerfile
@@ -170,6 +170,12 @@ RUN pip3 install http://download.pytorch.org/whl/cpu/torch-0.3.1-cp35-cp35m-linu
 # but it doesn't seem to be active anymore.
 RUN pip3 install --no-cache-dir git+https://github.com/waleedka/coco.git#subdirectory=PythonAPI
 
+#
+# imutils and dlib
+# Dlib is a modern C++ toolkit containing machine learning algorithms and tools for creating complex software in C++ to solve real world problems.
+#
+
+
 WORKDIR "/root"
 CMD ["/bin/bash"]
 
